<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvVarB"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_var_b"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvVarA" />

    <TextView
        android:id="@+id/tvVarC"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_bar_c"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvVarB" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="36dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="36dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="@+id/glTop" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/ivFormula"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvSelection"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_text"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurface" />

            <Spinner
                android:id="@+id/spFormula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_stroke"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <ImageView
        android:id="@+id/ivFormula"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/cvInstructions"
        app:srcCompat="@android:drawable/title_bar" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/glBottom"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glStart" />

    <TextView
        android:id="@+id/tvFirstResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvResultTitle" />

    <TextView
        android:id="@+id/tvSecondResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/glBottom"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstResult" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toTopOf="@+id/tvResultTitle"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/glStart" />

    <TextView
        android:id="@+id/tvVarA"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="58dp"
        android:text="@string/text_var_a"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/ivFormula" />

    <EditText
        android:id="@+id/etVarA"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_stroke"
        android:inputType="number|numberDecimal|numberSigned"
        android:paddingHorizontal="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@+id/tvVarA"
        app:layout_constraintTop_toBottomOf="@+id/ivFormula" />

    <EditText
        android:id="@+id/etVarB"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_stroke"

        android:inputType="number|numberDecimal|numberSigned"
        android:paddingHorizontal="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvVarB"
        app:layout_constraintTop_toBottomOf="@+id/etVarA" />

    <EditText
        android:id="@+id/etVarC"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_stroke"

        android:inputType="number|numberDecimal|numberSigned"
        android:paddingHorizontal="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvVarC"
        app:layout_constraintTop_toBottomOf="@+id/etVarB" />

</androidx.constraintlayout.widget.ConstraintLayout>